# a16z-chart-library

./: AGENTS.md  README.md  browse.html  build_browse_html.py  pyproject.toml  reclassify.py  requirements.txt  scrape.py
examples/: README.md  generate_all.py  index.html
examples/a16z-news/: all.html  area.json  area.py  area.yaml  bar.json  bar.py  bar.yaml  big_number.py  diverging_bar.py  diverging_bar.yaml  line.py  line.yaml  map.json  map.py  map.yaml  pie.py  pie.yaml  scatter.json  scatter.py  scatter.yaml  sparkline_area.py  sparkline_area.yaml  sparkline_bar.py  sparkline_bar.yaml  sparkline_line.json  sparkline_line.py  sparkline_line.yaml  stat_card.py  table.json  table.py  table.yaml
examples/care-indeed/: area.json  area.py  area.yaml  bar.json  bar.py  bar.yaml  big_number.json  big_number.py  diverging_bar.json  diverging_bar.py  diverging_bar.yaml  gauge.py  generate_all.py  line.json  line.py  line.yaml  map.json  map.py  map.yaml  pie.json  pie.py  pie.yaml  scatter.json  scatter.py  scatter.yaml  sparkline_area.json  sparkline_area.py  sparkline_area.yaml  sparkline_bar.json  sparkline_bar.py  sparkline_bar.yaml  sparkline_line.json  sparkline_line.py  sparkline_line.yaml  stat_card.json  stat_card.py  table.json  table.py  table.yaml
examples/default/: area.json  area.py  bar.json  bar.py  big_number.json  big_number.py  diverging_bar.json  gauge.py  (+20 more)
graphs/: browse.html
progress/: completed_articles.txt
scripts/: build_browse_html.py  create_theme.py  rebuild_all.py  reclass_all.py  reclassify.py  scrape.py
tests/: test_charts.py
(+463 files in other folders)
